--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.19",
         "dompdf/dompdf": "^2.0",
         "excelwebzone/recaptcha-bundle": "^1.5",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.27",
         "symfony/asset": "5.4.*",
