--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,13 @@
         "doctrine/orm": "^2.19",
         "dompdf/dompdf": "^2.0",
         "excelwebzone/recaptcha-bundle": "^1.5",
+        "giggsey/libphonenumber-for-php": "^8.13",
+        "hexaequo/currency-converter-bundle": "^1.0",
         "knplabs/knp-paginator-bundle": "^5.9",
+        "lexik/jwt-authentication-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.27",
+        "stripe/stripe-php": "^14.5",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
         "symfony/doctrine-messenger": "5.4.*",
@@ -34,6 +38,7 @@
         "symfony/process": "5.4.*",
         "symfony/property-access": "5.4.*",
         "symfony/property-info": "5.4.*",
+        "symfony/rate-limiter": "5.4.*",
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.4.*",
         "symfony/serializer": "5.4.*",
@@ -46,6 +51,8 @@
         "symfony/validator": "5.4.*",
         "symfony/web-link": "5.4.*",
         "symfony/yaml": "5.4.*",
+        "symfonycasts/reset-password-bundle": "^1.21",
+        "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "twilio/sdk": "^8.0",
