--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,7 +6,10 @@
 parameters:
 
     google_recaptcha_site_key: '%env(GOOGLE_RECAPTCHA_SITE_KEY)%'
-
+    app.jwtsecret: '%env(JWT_SECRET)%'
+    photo_dir: "%kernel.project_dir%/public/images"
+    images_directory: '%kernel.project_dir%/public/uploads/images'
+    files_directory : '%kernel.project_dir%/public/uploads/files'
 services:
     
     _defaults:
@@ -14,6 +17,16 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    App\Repository\UserRepository:
+        autowire: true
+        autoconfigure: false
+  
+    App\Entity\User:
+        autowire: true
+        autoconfigure: false
+    
+   
+    
     # Définition du service SmsGenerator
     App\Service\SmsGenerator:
     # makes classes in src/ available to be used as services
